# iotonchain

./: .gitignore  README.MD
asp/files/: crime.lp
client/: README.md  angular.json  api.rest  package-lock.json  package.json
client/src/: index.html  proxy.conf.json  styles.scss
contract/: .env.example  .gitignore  README.md  hardhat.config.ts  howto.md  package-lock.json  package.json
contract/.openzeppelin/: unknown-80002.json
contract/contracts/: Box.sol  Hash.sol
contract/scripts/: box.deploy.ts  hash.listner.ts
contract/test/: box.test.ts  hash.test.ts
contracts/: .env.example  README.md  hardhat.config.ts  mochaOutput.json  package-lock.json  package.json  testMatrix.json
contracts/.openzeppelin/: unknown-80002.json
contracts/contracts/: Box.sol  Hash.sol  Token.sol  TokenV2.sol
contracts/scripts/: box.deploy.ts  box.store.ts  hash.deploy.ts  hash.sign.ts  hash.update.ts  token.deploy.ts  token.mint.ts  tokenV2.accept.ts  tokenV2.deploy.ts  tokenV2.listner.ts  tokenV2.mint.ts  tokenV2.mint2.ts  tokenV2.transfer.ts
contracts/test/: box.test.ts  hash.test.ts  token.test.ts  tokenV2.test.ts
doc/: README.MD  noteeee.md  renameFile.sh
doc/poster/: poster.tex
doc/slide/: slide.tex
doc/tesi/: doc.tex  (+2 more)
keycloak/: README.MD  run.sh
sensor/: .env.example  README.MD  package-lock.json  package.json  pyproject.toml  send-listen.py  send.py
sensor/sample/: responseDT.json
sensor/src/: manage.js  receiver.js  sender.js
sensor2/: listen.py  send.py
server/: .editorconfig  .gitignore  HELP.md  README.md  generateWrapper.sh  mvnw  pom.xml
(+257 files in other folders)
